Fix bug: navbar forcing screen wisth on mobile devices

--- a/src/styles/hamburger-menu.css
+++ b/src/styles/hamburger-menu.css
@@ -1,4 +1,4 @@
-#menuToggle {
+.menuToggle {
 	display: block;
 	position: absolute;
 	top: 30px;
@@ -8,7 +8,7 @@
 	user-select: none;
 }
 
-#menuToggle input {
+.menuToggle input {
 	display: block;
 	width: 40px;
 	height: 32px;
@@ -21,7 +21,7 @@
 	-webkit-touch-callout: none;
 }
 
-#menuToggle span {
+.menuToggle span {
 	display: block;
 	width: 33px;
 	height: 4px;
@@ -36,54 +36,59 @@
 	opacity 0.55s ease;
 }
 
-#menuToggle span:first-child {
+.menuToggle span:first-child {
 	transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2) {
+.menuToggle span:nth-last-child(2) {
 	transform-origin: 0% 100%;
 }
 
-#menuToggle input:checked~span {
+.menuToggle .s1Checked {
 	opacity: 1;
 	transform: rotate(45deg) translate(-2px, -1px);
 	background: #232323;
 }
 
-#menuToggle input:checked~span:nth-last-child(3) {
+.menuToggle .s2Checked {
 	opacity: 0;
 	transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-#menuToggle input:checked~span:nth-last-child(2) {
+.menuToggle .s3Checked {
 	opacity: 1;
 	transform: rotate(-45deg) translate(0, -1px);
 }
 
-#menu {
+.menu {
     display: flex;
     flex-direction: column;
 	position: absolute;
-	width: 300px;
-	margin: -100px 0 0 0;
-	padding: 50px;
-	padding-top: 125px;
-	right: -100px;
+	width: 0px;
+	padding: 0;
+	right: -50px;
 	background: #ededed;
 	list-style-type: none;
 	-webkit-font-smoothing: antialiased;
 	transform-origin: 0% 0%;
-	transform: translate(100%, 0);
-
-	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+	transition: width 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+	overflow-x: hidden;
 }
 
-#menu li {
+.menu li {
 	padding: 10px 0;
 	font-size: 22px;
 }
 
-#menuToggle input:checked~ul {
+.displayMenu {
+	width: 300px;
+	overflow-x: visible;
+	margin-top: -3rem;
+    padding-top: 4rem;
+}
+
+.menuToggle input:checked~ul {
 	transform: scale(1.0, 1.0);
 	opacity: 1;
+	display: block;
 }
