--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,22 +2,23 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: -webkit-fill-available;
     background-color: #d1d1d1;
     border-bottom: 1px solid #a5a5a5;
+    width: 100%;
 }
 
 nav h1 {
     margin: 1rem 0;
+    padding: 0 10%;
 }
 
 nav ul {
     display: flex;
     list-style: none;
     width: -webkit-fill-available;
-    padding: 0;
     margin: 0;
     justify-content: flex-end;
+    padding: 0 10%;
 }
 
 nav li {
